--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "auto-blur": "^1.1.1",
     "fh-components": "^1.2.54",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
